<resources>
    <string name="app_name">Buleia</string>
    <string name="profile_label">Profile</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loginButton">Login</string>
    <string name="login_name">Login</string>
    <string name="createanaccount">Create an Account</string>
    <string name="signup">Sign Up</string>
    <string name="repeatpassword">Repeat Password</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="action_msg" translatable="false">action_msg</string>
    <string name="PleaseWait">Wait Please</string>
    <string name="useipvc">Use ipvc email</string>
    <string name="username">Username</string>
    <string name="btn_save">Change Image</string>
    <string name="btn_name">Change Name</string>
    <string name="type_message">Type Your Message</string>
    <string name="btn_send">Send Message</string>
    <string name="where_to">Where to?</string>
    <string name="Districts">District</string>
    <string name="submit">Submit</string>
    <string name="city">City</string>
    <string name="title">Title</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="PickUP1">Pick Up 1</string>
    <string name="PickUp2">Pick Up 2</string>
    <string name="PickUp3">Pick Up 3</string>
    <string name="DropOff">Drop Off</string>
    <string name="Data">Date and Time</string>
    <string name="notifications">Notifications</string>
    <string name="To">To</string>
    <string name="From">From</string>
    <string name="rideDay">Date</string>
    <string name="rideTime">Hour</string>
    <string name="rideFrom">Begin of Ride</string>
    <string name="rideTo">End of Ride</string>
    <string name="pickup_02">Pick up 2</string>
    <string name="pickup_03">Pick up 3</string>
    <string name="pickup_01">Pick up 1</string>
    <string name="preference_file_key">Shared_Home</string>
</resources>