<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/icons"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


    <TextView
        android:id="@+id/login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_name"
        android:textSize="60sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/primary_dark"/>

    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:boxBackgroundColor="@color/primary_text"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/emailText"
            android:textColor="@color/secondary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/secondary_text"
            android:hint="@string/email"
            android:autofillHints="emailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:endIconTint="@color/accent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:boxBackgroundColor="@color/primary_text"
        app:endIconMode="password_toggle"
        android:layout_below="@+id/emailTf">

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="password" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Butão login-->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTf"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/loginButton"
        android:textColor="@color/icons"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/criarconta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerInParent="true"
        android:text="@string/createanaccount"
        android:textSize="20sp" />

</RelativeLayout>