<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HistoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <Button
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/design_default_color_error"
                    android:onClick="button1"
                    app:icon="@drawable/ic_baseline_arrow_back_ios_24"/>

                <TextView
                    android:text="Create Ride"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBarLayout"
            android:text="@string/PickUP1">
        </EditText>

        <EditText
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:text="@string/PickUp2">
        </EditText>

        <EditText
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:text="@string/PickUp3">
        </EditText>

        <EditText
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3"
            android:text="@string/DropOff">
        </EditText>

        <EditText
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text4"
            android:text="@string/Data">
        </EditText>

    <Button
        android:id="@+id/ButtonAdicionaBoleia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text5"
        android:text="Criar Buleia"
        android:textColor="@color/browser_actions_bg_grey">

    </Button>


    </RelativeLayout>