<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_margin="10dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|start"
            android:text="item"
            android:textColor="@color/primary_dark"
            android:textStyle="bold"/>


    </LinearLayout>-->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp" >

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textSize="18sp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/primary_dark"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_city"
            android:layout_below="@+id/welcome_text"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:text="@string/city"
            android:textColor="@color/primary_dark"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/textView_city"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_districts"
            android:layout_below="@+id/spinner_city"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:text="@string/Districts"
            android:textColor="@color/primary_dark"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <Spinner
            android:id="@+id/spinner_districts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_districts"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_districts"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="@color/divider" />

    </RelativeLayout>





</LinearLayout>